--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,16 @@ p {
     font: 1.4em sans-serif;
 }
 
+ul{
+ display: block;
+ padding: unset;
+}
+
+li {
+    font: 1.4em sans-serif;
+    list-style: none;
+}
+
 .head-row {
     justify-content:space-around;
     flex-wrap: wrap;
